--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ commands:
     parameters:
       workflow_id:
         type: string
-        # default: ${CIRCLE_WORKFLOW_ID}  
+        default: ${CIRCLE_WORKFLOW_ID}  
     steps:
       - run:
           name: Destroy environments
@@ -207,8 +207,6 @@ jobs:
             npm audit --audit-level=critical
 
       # - notify_on_failure
-  # 
-    
   # deploy-infrastructure:
   #   docker:
   #     - image: amazon/aws-cli
@@ -220,34 +218,31 @@ jobs:
   #         command: |
   #           aws cloudformation deploy \
   #             --template-file .circleci/files/backend.yml \
-  #             --tags project=your-tag \
+  #             --tags project=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
   #             --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-  #             --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7} 
+  #             --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" 
   #     - run:
   #         name: Ensure front-end infrastructure exist
   #         command: |
   #           aws cloudformation deploy \
   #             --template-file .circleci/files/frontend.yml \
-  #             --tags project=your-tag \
+  #             --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
   #             --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
-  #             --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7} 
+  #             --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" 
   #     - run:
   #         name: Add back-end ip to ansible inventory
   #         command: |
-  #           cd .circleci/ansible
-  #           cat inventory.txt
   #           aws ec2 describe-instances \
-  #           --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #           --output text --filter Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} >> inventory.txt
-  #           cat inventory.txt
-               
+  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
+  #             --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #             --output text >> .circleci/ansible/inventory.txt
   #     - persist_to_workspace:
-  #         root: ~/
+  #         root: .
   #         paths:
-  #           - project/.circleci/ansible/inventory.txt
+  #           - .circleci/ansible/*
   #     - destroy-environment:
   #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
-
+    
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -261,7 +256,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --tags project=your-tag \
               --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7} 
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -269,44 +264,31 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --tags project=your-tag \
               --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7}
+              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID:0:7} 
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            echo $(aws ec2 describe-instances \
+            cd .circleci/ansible
+            cat inventory.txt
+            aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            # --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-            --output text) >> ~/project/.circleci/ansible/inventory.txt
-            
+            --output text  >> inventory.txt
+            cat inventory.txt
+               
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.16
-      # - image: cimg/base:stable
-
+      - image: cimg/base:stable
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - 'f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e'
-      - run: 
-          name: View content of inventory.txt
-          command: cat .circleci/ansible/inventory.txt 
-
-      # - run:
-      #     name: Install dependencies
-      #     command: |
-      #       # Install dependencies needed for your playbook
-      #       apk add --update ansible
-      #       pip install awscli
-      #       aws --version
-            # apk add --update --no-cache tar gzip ansible aws-cli
+            - 'f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e'    
       - attach_workspace:
           at: ~/
       - install_ansible
@@ -314,162 +296,70 @@ jobs:
       - run:
           name: Configure server
           command: |
-            cd .circleci/ansible
-            ansible-playbook -i inventory.txt configure-server.yml
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/backend
+             cd .circleci/ansible
+             cat inventory.txt
+            #  ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  # configure-infrastructure:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints:
-  #           - 'f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e'    
-  #     - attach_workspace:
-  #         at: ~/
-  #     - install_ansible
-  #     - install_awscli
-  #     - run:
-  #         name: Configure server
-  #         command: |
-  #            cd .circleci/ansible
-  #            cat inventory.txt
-  #           #  ansible-playbook -i inventory.txt configure-server.yml
-  #     - destroy-environment:
-  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0 # safest to use to avoid migration errors
+      - image: cimg/node:13.8.0
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip ansible aws-cli
-            # sudo apt install -y tar gzip curl
-            # curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            # unzip -qq awscliv2.zip
-            # sudo ./aws/install
-      - restore_cache:
-          keys: [backend-build]
-      - attach_workspace:
-          at: ~/
+      - install_awscli
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
-            npm run build
-            npm run migrations >> migrations.txt
+            npm run migrations > migrations_dump.txt
       - run:
-          name: Send migration results to kvdb
+          name: Send migration status to kvdb.io
           command: |
-            if grep -q "success" ~/project/backend/migrations.txt
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl --insecure https://kvdb.io/MbpzE7T3B6UVFbcGRvtMvW/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              curl https://kvdb.io/MbpzE7T3B6UVFbcGRvtMvW/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  # run-migrations:
-  #   docker:
-  #     - image: cimg/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - install_awscli
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run migrations > migrations_dump.txt
-  #     - run:
-  #         name: Send migration status to kvdb.io
-  #         command: |
-  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-  #           then
-  #             curl https://kvdb.io/MbpzE7T3B6UVFbcGRvtMvW/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-  #           fi
-  #     - destroy-environment
-  #     - revert-migrations
-
-  # deploy-frontend:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints:
-  #           - 'f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e'    
-  #     - attach_workspace:
-  #         at: ~/
-  #     - install_awscli
-  #     - install_nodejs
-  #     - install_ansible
-  #     - run:
-  #         name: Get backend url
-  #         command: |
-  #           export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #             --filters "Name=tag:project,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #             --output text
-  #             )
-  #           export "API_URL=http://${BACKEND_PUBLIC_IP}:3030" 
-  #           echo "API_URL = ${API_URL}"
-  #           echo API_URL = "http://${BACKEND_PUBLIC_IP}:3030" >> frontend/.env
-  #           cat frontend/.env
-  #     - run:
-  #         name: Deploy frontend objects
-  #         command: |
-  #           cd frontend
-  #           sudo npm install -g npm@latest
-  #           rm -rf node_modules
-  #           npm install
-  #           npm run build
-  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-  #     - destroy-environment
-  #     - revert-migrations   
+      - destroy-environment
+      - revert-migrations
 
   deploy-frontend:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: cimg/base:stable
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip nodejs npm aws-cli
-      - restore_cache:
-          keys: [frontend-build]
+      - add_ssh_keys:
+          fingerprints:
+            - 'f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e'    
+      - attach_workspace:
+          at: ~/
+      - install_awscli
+      - install_nodejs
+      - install_ansible
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
+            export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
+              --filters "Name=tag:project,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text
+              )
+            export "API_URL=http://${BACKEND_PUBLIC_IP}:3030" 
             echo "API_URL = ${API_URL}"
-            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+            echo API_URL = "http://${BACKEND_PUBLIC_IP}:3030" >> frontend/.env
             cat frontend/.env
-      - restore_cache:
-          keys: [frontend-build]
       - run:
           name: Deploy frontend objects
           command: |
             cd frontend
+            sudo npm install -g npm@latest
+            rm -rf node_modules
             npm install
             npm run build
-            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment
+      - revert-migrations   
                     
   deploy-backend:
     docker:
@@ -612,38 +502,38 @@ notify_on_success:
 workflows:
   default:
     jobs:
-      # - build-frontend
-      # - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       # - notify_on_success:
       #     requires:
       #       - test-frontend
       #       - test-backend
       #       - scan-frontend
       #       - scan-backend
-      - deploy-infrastructure
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [master]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
-      # - cleanup:
-      #     requires: [cloudfront-update]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update
+          requires: [smoke-test]
+      - cleanup
+          requires: [cloudfront-update]
